# dev-kit-mcp-server

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  run_fastmcp.py
.github/workflows/: ci.yml  codecov.yml  copilot-setup-steps.yml  docs.yml
dev_kit_gh_mcp_server/: fastmcp_server.py
dev_kit_gh_mcp_server/tools/: __init__.py  base.py  issue.py  pr.py  repo.py
dev_kit_mcp_server/: __init__.py  create_server.py  custom_fastmcp.py  fastmcp_server.py  tool_factory.py
dev_kit_mcp_server/core/: __init__.py  base_op.py
dev_kit_mcp_server/tools/: __init__.py  commands_tool.py  rename.py
dev_kit_mcp_server/tools/commands/: __init__.py  make_target.py  predefined.py
dev_kit_mcp_server/tools/core/: __init__.py  (+4 more)
docs/source/: api.rst  conf.py  development.rst  index.rst  usage.rst
examples/: README.md
examples/complex/: .gitignore  shapes.py
examples/integration/: __init__.py  advanced_operations.py  basic_operations.py  calculator.py
examples/simple/: hello_world.py  person.py
my_pkg/: __init__.py
py_code/: __init__.py  __main__.py  analyzer.py  cli.py  fastmcp_server.py  integrated_server.py  mcp_tools.py  server.py  tool_factory.py  tool_factory_example.py  version.py
py_code/mcp_server/: __init__.py  __main__.py
py_code/tools/: __init__.py  code_analyzer.py  code_traversal.py  commands_tool.py  create.py  file_ops.py  file_search.py  grep_search.py  list_code_usages.py  list_dir.py  mcp_tools.py  move.py  read_file.py  remove.py  semantic_search.py  tool_factory.py  tool_factory_example.py  utils.py  vscode_api.py
py_code_mcp_server/: __init__.py  __main__.py  analyzer.py  cli.py  fastmcp_server.py  integrated_server.py  mcp_tools.py  server.py
tests/: Makefile  __init__.py  conftest.py  stdio.py  test_analyzer_additional.py  test_analyzer_additional_parameterized.py  test_analyzer_integration.py  test_analyzer_simple.py  test_analyzer_simple_parameterized.py  test_asgi_app_loading.py  test_authorized_commands.py  test_cli.py  test_code_analyzer_parameterized.py  test_fastmcp.py  test_fastmcp_server.py  test_grep_search_parameterized.py  test_imports.py  test_init.py  test_integrated_server.py  test_main.py  test_mcp_server.py  test_mcp_server_main.py  test_mcp_tools.py  test_read_file_parameterized.py  test_server.py  test_tool_factory.py  test_tool_factory_example.py  test_version.py
tests/tools/: __init__.py  test_commands_tool.py  test_tool_factory.py
(+77 files in other folders)
