[project]
name = "py-code-mcp-server" # changed from my-pkg
dynamic = ["version"]
description = ""
authors = [
    { name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com" }, # todo: change to your name and email
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

keywords = [
    "python"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "fastmcp>=0.1.0",
    "fastapi-mcp>=0.1.0"
]

[project.scripts]
py-mcp-server = "py_code.mcp_server.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "hypothesis>=6.23.3",
    "pre-commit>=2.20.0",
    "pre-commit-uv>=4",
    "pytest-cov>=4.0.0",
    "mypy==1.15.0",
    "pytest-parametrization>=2022",
    "ruff>=0.8.2",
    "sybil[pytest]",
    "httpx>=0.27.0"
]
docs = [
    "sphinx>=8.2.0; python_version >= '3.11'",
    "sphinx>=7.0.0; python_version < '3.11'",
    "sphinx-rtd-theme>=3.0.2",
]
[tool.hatch.build.targets.sdist]
only-include = ["py_code", ] # changed from py_code_mcp_server
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["py_code", ] # changed from py_code_mcp_server
source = "."


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.optional-dependencies]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**", ]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N", "D","DOC"]

fixable = ["ALL"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "DOC"]
"docs/*" = ["D", "DOC"]
[tool.ruff.lint.isort]
combine-as-imports = true
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi_mcp",
    "fastmcp",
    "pydantic",
    "uvicorn"
]
ignore_missing_imports = true
